fixed subtitle z-index issue

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -14,7 +14,7 @@
 .subtitle {
 	margin-left: 2em;
 	font-size: x-large;
-	z-index: 2;
+	z-index: 1;
 	color: rebeccapurple;
 }
 
